--- a/cjt.html
+++ b/cjt.html
@@ -534,6 +534,9 @@
         </div>
         <div id="qrBox" style="margin-top:25px; display:flex; justify-content:center;"></div>
 <p style="margin-top:10px; opacity:0.9;">Scan to Download App</p>
+<button class="btn-download" style="margin-top:15px;" onclick="openWebMode()">
+🌐 Open Web Version
+</button>
     </section>
 
     <!-- Footer -->
@@ -585,6 +588,9 @@
 });
 function handleDownload() {
     window.location.href = "https://mega.nz/file/0isRlRBA#xkKhQjc-yrDFkjHlsKoO0z-wM94Hk7irz817_8Ae6zU";
+}
+function openWebMode() {
+    window.open("https://mhpsport93-code.github.io/MHPUTECH/app.html", "_blank");
 }
     </script>
 </body>
