--- a/cjt.html
+++ b/cjt.html
@@ -590,7 +590,7 @@ function handleDownload() {
     window.location.href = "https://mega.nz/file/0isRlRBA#xkKhQjc-yrDFkjHlsKoO0z-wM94Hk7irz817_8Ae6zU";
 }
 function openWebMode() {
-    window.open("https://mhpsport93-code.github.io/MHPUTECH/app.html", "_blank");
+    window.open("https://cjtweb.kumarthakurabhishek41.workers.dev", "_blank");
 }
     </script>
 </body>
