--- a/cjt.html
+++ b/cjt.html
@@ -582,12 +582,12 @@
             });
         });
         new QRCode(document.getElementById("qrBox"), {
-    text: "https://mega.nz/file/0isRlRBA#xkKhQjc-yrDFkjHlsKoO0z-wM94Hk7irz817_8Ae6zU",
+    text: "https://limewire.com/d/CwHNQ#XLGmn6TuRe",
     width: 180,
     height: 180
 });
 function handleDownload() {
-    window.location.href = "https://mega.nz/file/0isRlRBA#xkKhQjc-yrDFkjHlsKoO0z-wM94Hk7irz817_8Ae6zU";
+    window.location.href = "https://limewire.com/d/CwHNQ#XLGmn6TuRe";
 }
 function openWebMode() {
     window.open("https://cjtweb.kumarthakurabhishek41.workers.dev", "_blank");
