--- a/cjt.html
+++ b/cjt.html
@@ -582,12 +582,12 @@
             });
         });
         new QRCode(document.getElementById("qrBox"), {
-    text: "https://limewire.com/d/CwHNQ#XLGmn6TuRe",
+    text: "https://filetolinkneon1-5b71323869de.herokuapp.com/stream/1283054?hash=e67b28&d=true",
     width: 180,
     height: 180
 });
 function handleDownload() {
-    window.location.href = "https://limewire.com/d/CwHNQ#XLGmn6TuRe";
+    window.location.href = "https://filetolinkneon1-5b71323869de.herokuapp.com/stream/1283054?hash=e67b28&d=true";
 }
 function openWebMode() {
     window.open("https://cjtweb.kumarthakurabhishek41.workers.dev", "_blank");
