--- a/cjt.html
+++ b/cjt.html
@@ -582,12 +582,12 @@
             });
         });
         new QRCode(document.getElementById("qrBox"), {
-    text: "#",
+    text: "https://filetolinkneon1-5b71323869de.herokuapp.com/stream/1284552?hash=51569a&d=true",
     width: 180,
     height: 180
 });
 function handleDownload() {
-    window.location.href = "#";
+    window.location.href = "https://filetolinkneon1-5b71323869de.herokuapp.com/stream/1284552?hash=51569a&d=true";
 }
 function openWebMode() {
     window.open("https://cjtweb.kumarthakurabhishek41.workers.dev", "_blank");
